--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>
         Movie Reviewer App
     </title>
@@ -17,12 +17,47 @@
 
     <h1 id="doc-header">Movie Reviewer App!</h1>
 
+    <div class="card card-default">
+        <form id="movie-form">
+            <div class="form-group">
+                <label for="name-input">Movie Title</label>
+                <input type="text" class="form-control" id="name-input" placeholder="Enter movie name">
+            </div>
+            <div class="form-group">
+                <label for="rating-input">Rating</label>
+                <input type="text" class="form-control" id="rating-input" placeholder="Enter rating out of 10">
+                <small>Rate from 1-10</small>
+            </div>
+            <div class="form-group">
+                <label for="review-input">Review</label>
+                <textarea class="form-control" id="review-input" rows="3" placeholder="Review of the movie"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" id="submit-form">Submit</button>
+        </form>
+    </div>
 
+    <br>
 
-    <!-- jQuery, & app.js -->
+    <div class="card card-default">
+        <table class="table table-hover" id="movies-table">
+            <thead>
+                <tr>
+                    <th scope="col">Movie Title</th>
+                    <th scope="col">Rating</th>
+                    <th scope="col">Review</th>
+                </tr>
+            </thead>
+            <tbody id="movie-table-body">
+                   
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Firebase, jQuery, & app.js -->
+    <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
