New functions added, push form data into firebase & append new row with firebase data to page

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <form id="movie-form">
             <div class="form-group">
                 <label for="name-input">Movie Title</label>
-                <input type="text" class="form-control" id="name-input" placeholder="Enter movie name">
+                <input type="text" class="form-control" id="name-input" placeholder="Enter movie name" required>
             </div>
             <div class="form-group">
                 <label for="rating-input">Rating</label>
-                <input type="text" class="form-control" id="rating-input" placeholder="Enter rating out of 10">
+                <input type="text" class="form-control" id="rating-input" placeholder="Enter rating out of 10" required>
                 <small>Rate from 1-10</small>
             </div>
             <div class="form-group">
                 <label for="review-input">Review</label>
-                <textarea class="form-control" id="review-input" rows="3" placeholder="Review of the movie"></textarea>
+                <textarea class="form-control" id="review-input" rows="3" placeholder="Review of the movie" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary" id="submit-form">Submit</button>
         </form>
